src/index.css
:root {
  font-family: 'Plus Jakarta Sans', Helvetica, Arial, sans-serif;
  font-weight: 400;
  font-synthesis: none;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  --bg-color: #ffffff;
  --text-color: #000000;
  --board-bg: #f8fafc;
}
[data-theme='light'] {
  --bg-color: #ffffff;
  --text-color: #000000;
  --board-bg: #f8fafc;
}

[data-theme='dark'] {
  --bg-color: #1a1a1a;
  --text-color: #ffffff;
  --board-bg: #353637;
}
a {
  font-weight: 500;
  color: #646cff;
  text-decoration: inherit;
}
a:hover {
  color: #535bf2;
}
body {
  min-width: 320px;
  min-height: 100vh;
  background-color: var(--bg-color);
  color: var(--text-color);
}

h1 {
  font-size: 3.2em;
  line-height: 1.1;
}

button {
  border-radius: 8px;
  border: 1px solid transparent;
  padding: 0.6em 1.2em;
  font-size: 1em;
  font-weight: 500;
  font-family: inherit;
  background: none;
  cursor: pointer;
  transition: border-color 0.25s;
}

@media (prefers-color-scheme: light) {
  :root {
    color: #213547;
    background-color: #ffffff;
  }
  a:hover {
    color: #747bff;
  }
}

